# wa-frontend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  TODO.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
.github/: GCP_SETUP.md
.github/workflows/: deploy-frontend.yml
src/: app.py
src/pages/: portfolio_cash_page.py  portfolio_crypto_page.py  portfolio_index_funds_page.py  portfolio_reits_page.py  portfolio_retirement_plan_page.py  portfolio_stocks_page.py
src/pages/analyzer/: analyzer_reits_page.py  reit_analyzer_page.py  stock_analyzer_page.py
src/pages/portfolio/: portfolio_cash_page.py  portfolio_crypto_page.py  portfolio_index_funds_page.py  portfolio_overview_page.py  portfolio_reits_page.py  portfolio_retirement_plan_page.py  portfolio_stocks_page.py
