[project]
name = "wealth-assistant-frontend"
version = "0.1.0"
description = "A basic Streamlit app with two pages."
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.32.0",
    "requests==2.32.0",
    "python-dotenv==1.0.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"